--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,8 +1,8 @@
 /* * {
   font-family: "Times New Roman", Times, serif;
 } */
-.Main-Home-div-content{
-    font-family: "Times New Roman", Times, serif;
+.Main-Home-div-content {
+  font-family: "Times New Roman", Times, serif;
 }
 
 .home-para {
@@ -15,18 +15,19 @@
   top: 0px;
 }
 
+
 .home-img-div img {
-  /* height: 650px; */
+  height: 66vh;
 }
 
 .home-text-of-para {
-  padding: 0.5rem 5rem;
+  padding: 0.5rem 6.5rem;
 }
 
 .top-left {
   position: absolute;
-  top: 10%;
-  left: 5%;
+  top: 14%;
+  left: 6%;
 }
 .img-Para {
   margin-right: 65%;
@@ -40,6 +41,16 @@
   font-weight: 700;
 }
 
+.dem-img-text,
+.satellite-img-text,
+.geo-img-text,
+.webdev-img-text {
+  font-size: 18px;
+}
+
+.our-serv-heading{
+  margin-top: 5px;
+}
 .home-img-two {
   width: 100%;
 }
@@ -87,6 +98,11 @@
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
+.overview-item:hover{
+  transform: translateY(-5px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
 .geo-sol {
   background: linear-gradient(135deg, #3498db, #2980b9);
 }
@@ -122,3 +138,200 @@
 /* .Our-services-div{
     background-color: #e5e4ec;
   } */
+
+/* _---------------------------------------_ */
+
+@media (min-width: 320px) and (max-width: 425px) {
+  /* .img-Para {
+    display: none;
+  } */
+  .img-Para {
+    margin-right: 15%;
+    font-size: 11px;
+  }
+
+
+
+  .top-left {
+    position: absolute;
+    top: 6%;
+    left: 3%;
+  }
+
+  .home-well {
+    font-size: 12px;
+    margin-bottom: 4px;
+  }
+  .home-para {
+    font-size: 10px;
+  }
+  .home-text-of-para {
+    padding: 0.5rem;
+  }
+  .over-cont {
+    padding: 0.3rem;
+  }
+  .Overview-heading {
+    font-size: 22px;
+  }
+  .overview-text {
+    font-size: 12px;
+    text-align: justify;
+    margin-bottom: 0;
+    margin: 0 8px;
+  }
+  .overview-item {
+    margin: 8px;
+  }
+  .our-serv-heading {
+    font-size: 22px;
+  }
+  .home-img-div img {
+    height: 90vh;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .dem-img-text,
+  .satellite-img-text,
+  .geo-img-text,
+  .webdev-img-text {
+    font-size: 11px;
+  }
+
+  .feature-img-heading {
+    font-size: 21px;
+  }
+}
+
+@media (min-width: 426px) and (max-width: 1024px) {
+  .img-Para {
+    margin-right: 12%;
+    font-size: 12px;
+  }
+
+  .top-left {
+    position: absolute;
+    top: 5%;
+    left: 6%;
+  }
+
+  .home-well {
+    /* font-size: 12px; */
+    margin-bottom: 4px;
+  }
+  .home-para {
+    font-size: 12px;
+  }
+  .home-text-of-para {
+    padding: 1rem;
+  }
+  .over-cont {
+    padding: 0.3rem;
+  }
+  .Overview-heading {
+    font-size: 28px;
+  }
+  .overview-text {
+    font-size: 14px;
+    /* text-align: justify; */
+    margin-bottom: 0;
+    margin: 0 8px;
+  }
+  .overview-item {
+    margin: 8px;
+  }
+  .our-serv-heading {
+    font-size: 28px;
+  }
+  .home-img-div img {
+    height: 70vh;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .dem-img-text,
+  .satellite-img-text,
+  .geo-img-text,
+  .webdev-img-text {
+    font-size: 14px;
+  }
+  .feature-img-heading {
+    font-size: 24px;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
+  .img-Para {
+    margin-right: 35%;
+    font-size: 15px;
+  }
+
+  .top-left {
+    position: absolute;
+    top: 12%;
+    left: 8%;
+  }
+
+  .home-well {
+    /* font-size: 12px; */
+    margin-bottom: 4px;
+  }
+
+  .home-para {
+    font-size: 14px;
+  }
+
+  .home-text-of-para {
+    padding: 0.5rem;
+  }
+
+  .over-cont {
+    padding: 0.3rem;
+  }
+
+  .Overview-heading {
+    font-size: 2rem;
+  }
+
+  .overview-text {
+    font-size: 14px;
+    /* text-align: justify; */
+    margin-bottom: 0;
+    margin: 0 30px;
+  }
+
+  /* .overview-item {
+    margin: 8px;
+  } */
+
+  .our-serv-heading {
+    font-size: 2rem;
+  }
+
+  .home-img-div img {
+    height: 66vh;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .dem-img-text,
+  .satellite-img-text,
+  .geo-img-text,
+  .webdev-img-text {
+    font-size: 15px;
+  }
+
+  /* .feature-img-heading {
+    font-size: 22px;
+  } */
+}
+
+@media (min-width: 1400px) {
+  .over-cont{
+    max-width: 1683px;
+  }
+  }
